objects/CMFtoSubProjectSite__c.object
<CustomObject>
    <description>Junction object between CMF and SubProjectSite.</description>
    <fields>
        <fullName>CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipName>RMStoSubProjectSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Request_Id__c</fullName>
        <label>RMS Request Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF__c</fullName>
        <formula>CMF_Info__r.Ship_CMF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteCmfRmsReqId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SiteCmfRmsReqId</label>
        <length>56</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubProjectSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubProjectSite</label>
        <referenceTo>SubProjectSite__c</referenceTo>
        <relationshipName>RMStoSubProjectSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CMFtoSubProjectSite</label>
    <nameField>
        <displayFormat>CMFS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMFtoSubProjectSites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>